--- a/base/public/css/registrar_tarjeta.css
+++ b/base/public/css/registrar_tarjeta.css
@@ -113,29 +113,19 @@ visibility: hidden;
     }
 
     table {
-        border-collapse: collapse;
-        width: 100%;
-      }
-
-      th, td {
-        text-align: left;
-        padding: 8px;
-      }
-
-      tr:nth-child(even){background-color: #f2f2f2}
-
-      th {
-        background-color: #76323F;
-        color: white;
-      }
-
-      th, td {
-        text-align: left;
-        padding: 8px;
-      }
-
-
-      th {
-        background-color: #76323F;
-        color: white;
-      }
+      border-collapse: collapse;
+      width: 100%;
+  }
+    
+  th, td {
+      text-align: left;
+      padding: 15px;
+  }
+    
+  tr:nth-child(even){background-color: #f2f2f2}
+    
+  th {
+      background-color: #f6b93b;
+      color: white;
+  }
+  
