--- a/base/public/css/visualizar_perfil_libreria.css
+++ b/base/public/css/visualizar_perfil_libreria.css
@@ -4,8 +4,12 @@
 }
 
 
-
-
+h3{
+    color: #000;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 30px;
+}
 body{
     width: 1024px;
     margin: 0 auto;
@@ -250,4 +254,69 @@ th {
 
 #image_preview2{
     border-image: 0%;
+}
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides,.libroVendido {display: none}
+img {vertical-align: middle;}
+
+
+
+/* Slideshow container */
+.slideshow-container,#masVendidos {
+  max-width: 1000px;
+  position: relative;
+  width:800px;
+  float:left;
+  margin: 30px 35px; 
+   text-align: center;
+  
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev{
+  left:0; 
+}
+
+.mySlides img,.libroVendido img{
+  height:300px;
+  width:800px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+/* Fading animation */
+
+
+
+
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
