--- a/base/public/css/perfil_admin.css
+++ b/base/public/css/perfil_admin.css
@@ -17,10 +17,15 @@ main{
 
 }
 
+.nombre{
+    color: #76323F;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 30px;
+}
 
 .dato{
     color: #76323F;
     font-size: 20px;
     margin: 30px;
 }
-
