--- a/base/public/css/listar_librerias.css
+++ b/base/public/css/listar_librerias.css
@@ -66,12 +66,12 @@ main a:hover{
 
 main button{
     padding: 10px;
-    border: 1px solid #f6b93b;
+    border: 1px solid grey;
     border-radius: 15px;
     font-size: 15px;
     color: #fff;
     font-weight: bold;
-    background: #f6b93b;
+    background: grey;
     outline: none; 
 }
 
