--- a/base/public/css/registrar_genero.css
+++ b/base/public/css/registrar_genero.css
@@ -124,22 +124,45 @@ border: none;
 
     }
 
-p{
-    background-color: #76323F;
-    color: white;
-    text-align: center;
-    padding: 8px;
-    width:170px;
-    border-radius: 10px;
-    margin:10px 0;
     
-}
 
-p:hover{
-    opacity: 0.7;
-}
+    main button{
+        padding: 10px;
+        font-size: 5px;
+        border: none;
+        color: #fff;
+        font-weight: bold;
+        background-color: transparent;
+        outline: none;
+    }
+    
+    main button:hover{
+        padding: 10px;
+        color: #fff;
+        font-weight: bold;
+        outline: none;
+        cursor: pointer;
+    }
+    main button img{
+    width: 20px;
+    height: 20px;
+    }
+    
 
-#generos_lista{
-    margin:auto;
-    margin-top:45px;
-}
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+      
+    th, td {
+        text-align: left;
+        padding: 15px;
+    }
+      
+    tr:nth-child(even){background-color: #f2f2f2}
+      
+    th {
+        background-color: #f6b93b;
+        color: white;
+    }
+    
