--- a/base/public/css/inventario_general.css
+++ b/base/public/css/inventario_general.css
@@ -44,3 +44,61 @@ body {
     margin: 0;
     margin-bottom: 40px;
 }
+
+.overlay{
+  background: rgba(0, 0, 0,0.1);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right:0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  
+  }
+  
+  .overlay.active{
+      visibility: visible;
+  }
+  
+  .popup{
+      background: rgb(240, 238, 236);
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+      border-radius: 3px;
+      padding: 40px;
+      text-align: center;
+      width: 400px;
+  }
+  
+  .close {
+  
+      color: #aaaaaa;
+      font-size: 28px;
+      font-weight: bold;
+      line-height: 16px;
+      text-align: right;
+      margin-left: 310px;
+      margin-bottom: 20px;
+    }
+  
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  
+
+ main button {
+  padding: 10px;
+  border: 1px solid grey;
+  border-radius: 15px;
+  font-size: 25px;
+  color: #fff;
+  font-weight: bold;
+  background: grey;
+  outline: none; 
+}
+
