--- a/base/public/css/perfil_club.css
+++ b/base/public/css/perfil_club.css
@@ -9,7 +9,8 @@ section{
   .info{
     text-align: center;
   }
-  .chatSection{
+  #chatSection{
+    display:none;
       margin:0;
     width:70%;
     background-color:white;
@@ -41,7 +42,7 @@ section{
   
   .textSender{
      float:right;
-    background-color:grey;
+    background-color:aqua;
     padding:5px 10px;
     text-align:right;
     width:347px;
@@ -51,7 +52,7 @@ section{
   
   .textVisitor{
      float:left;
-    background-color:aqua;
+    background-color:grey;
     padding:5px 10px;
     text-align:left;
     width:347px;
