--- a/base/public/css/listar_categorias.css
+++ b/base/public/css/listar_categorias.css
@@ -51,23 +51,20 @@ main button{
     outline: none; 
 }
 
-
-
 table {
+    width: 80%;
+    margin: auto;
     border-collapse: collapse;
-    width: 100%;
-  }
+}
   
-  th, td {
+th, td {
     text-align: left;
-    padding: 8px;
-  }
+    padding: 15px;
+}
   
-  tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even){background-color: #f2f2f2}
   
-  th {
-    background-color: #76323F;
+th {
+    background-color: #f6b93b;
     color: white;
-  }
-
-  
+}
