--- a/base/public/css/listar_librerias.css
+++ b/base/public/css/listar_librerias.css
@@ -81,8 +81,9 @@ main button:hover{
 }
 
 table {
+    width: 80%;
+    margin: auto;
     border-collapse: collapse;
-    width: 100%;
 }
   
 th, td {
