--- a/base/public/css/listar_sucursales.css
+++ b/base/public/css/listar_sucursales.css
@@ -4,8 +4,25 @@ main{
 }
 
 main h1{
-    color: #76323F;
+    color: #000;
     font-size: 30px;
     margin: 30px;
 }
 
+table {
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+}
+  
+th, td {
+    text-align: left;
+    padding: 15px;
+}
+  
+tr:nth-child(even){background-color: #f2f2f2}
+  
+th {
+    background-color: #f6b93b;
+    color: white;
+}
