--- a/base/public/css/listar_librerias.css
+++ b/base/public/css/listar_librerias.css
@@ -80,6 +80,11 @@ main button:hover{
     outline: none;
 }
 
+main button img{
+width: 20px;
+height: 20px;
+}
+
 table {
     width: 80%;
     margin: auto;
