--- a/base/public/css/listar_autores.css
+++ b/base/public/css/listar_autores.css
@@ -76,6 +76,7 @@ main button:hover{
     outline: none;
     cursor: pointer;
 }
+
 main button img{
 width: 20px;
 height: 20px;
@@ -97,4 +98,16 @@ th {
     background-color: #f6b93b;
     color: white;
 }
+.botonEstado{
+    background-color:transparent;
+    color:#000;
+    border:solid 1px #000;
+    padding:5px 10px;
+}
 
+.botonEstado:hover{
+    background-color:#000;
+    color:#fff;
+    border:solid 1px #000;
+    padding:5px 10px;
+}
