--- a/base/public/css/libros_cards.css
+++ b/base/public/css/libros_cards.css
@@ -1,3 +1,19 @@
+label{
+    color: #000;
+    font-size: 20px;
+}
+
+input{
+    width: 30%;
+    height: 30px;
+    margin: 20px;
+    padding: 5px;
+    border: 1px solid #000;
+    border-radius: 15px;
+    background: none;
+    outline: none;
+}
+
 #libros{
     width:100%;
     margin:auto;
