Solicitudes de librería

--- a/base/public/css/footer.css
+++ b/base/public/css/footer.css
@@ -45,6 +45,10 @@
     color: #f6b93b;
   }
 
+  #footer span{
+    color: #f6b93b;
+  }
+
   .list li {
     margin: 5px 0;
     font-weight:lighter
