--- a/base/public/css/landingPageVisitor.css
+++ b/base/public/css/landingPageVisitor.css
@@ -43,18 +43,48 @@ Otro: #c09f80
     font-size: 20px;
     margin: 30px 10px;
     width: 190px;
+    cursor: pointer;
+  }
+
+    .bannerContent a {
+    padding: 15px 15px;
+    background-color: transparent;
+    border: solid 1px #fff;
+    color: #fff;
+    font-weight: lighter;
+    font-size: 20px;
+    margin: 30px 10px;
+    padding: 15px 35px;
+    width: 190px;
+    text-decoration: none;
+    cursor: pointer;
   }
 
   .bannerContent button:hover {
     padding: 15px 15px;
     background-color: transparent;
     border: solid 1px #fff;
-    color: #000;
+    color: #000 !important;
     background-color:#fff;
     font-weight: lighter;
     font-size: 20px;
     margin: 30px 10px;
     width: 190px;
+    cursor: pointer;
+  }
+
+  .bannerContent a:hover {
+    padding: 15px 15px;
+    background-color: transparent;
+    border: solid 1px #fff;
+    color: #000 !important;
+    background-color:#fff;
+    font-weight: lighter;
+    font-size: 20px;
+    margin: 30px 10px;
+    padding: 15px 35px;
+    width: 190px;
+    cursor: pointer;
   }
 
   @keyframes fadein {
