--- a/base/public/css/registrar_libro.css
+++ b/base/public/css/registrar_libro.css
@@ -1,68 +1,123 @@
 body {
-    background-color: #fff
-  }
-  h1{
-      margin: 18px;
-  }
-  .sign-in {
-    width: 90%;
-    margin-left:10px auto 39px 20px;
-  }
-  .line{
-    background-color: #f6b93b;
-    height:2px;
-    width:100%;
-    margin-bottom:30px;
-  }
-  .sign-in h1 {
-    margin:20px;
-  }
- .sign-in  img{
-    width: 148px;
-    height: 221px;
+  background-color: #fff
 }
-  
-  input {
-    display: block;
-    width:800px;
-    padding:10px;
-    margin:10px 0;
-    margin-left:20px;
-  }
-  
-  select{
-    width:800px;
-    padding:10px;
-     margin:10px 0;
-     margin-left:20px;
-     appearance: none;
-     height:40px;
-     background-color:#fff;
-  }
-  
-  label{
-    display: block;
-    margin-left:20px;
-  }
+
+main{
+  display: flow-root;
+  text-align: center;
+}
+
+main h1{
+  color: #000;
+  font-size: 30px;
+  font-weight: bold;
+  margin: 30px;
+}
+
+.pantalla_dividida1{
+  float: left;
+  background-image: url(https://www.3wallpapers.fr/wp-content/uploads/2015/05/Library-iPhone-3Wallpapers-Parallax.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 40%;
+  height: 1100px;
+  margin: 0 40px;
+}
+
+.pantalla_dividida2{
+  float: left;
+  width: 50%;
+  margin: 10px;
+  display: flow-root;
+}
+
+.sign-in  img{
+  width: 148px;
+  height: 221px;
+}
+
+#formulario-ClubLectura{
+  display: flow-root;
+}
+
+.contenedor_img_1{
+  float: left;
+  width: 45%;
+  margin: 15px;
+}
+
+.contenedor_img_2{
+  float: left;
+  width: 45%;
+  margin: 15px;
+}
+
+.datos_1{
+    text-align: center;
+    margin-bottom: 20px;
+    margin-right: 45px;
+    float: left;
+}
+
+.datos_2{
+    text-align: center;
+    margin-bottom: 20px;
+    float: left;
+}
+
+main input{
+  width: 90%;
+  height: 30px;
+  margin: 0 15px;
+  margin-bottom: 50px;
+  padding: 5px;
+  border: none;
+  border-bottom: 1px solid #000;
+  background: none;
+  outline: none;
+}
+
+main select{
+  width: 90%;
+  height: 30px;
+  margin: 0 15px;
+  margin-bottom: 50px;
+  padding: 5px;
+  border: none;
+  border-bottom: 1px solid #000;
+  background: none;
+  outline: none;
+}
+
+
   .btnsForm{
     /* float:right;
     margin-right:50px;
     margin-bottom:30px; */
   }
   
-  .btnsForm button{
-    padding:15px 45px;
-    border:solid 1px #000;
-    background-color:#fff;
-    color:#000;
-  }
-  
-  .btnsForm button:hover{
-      border:solid 1px #000;
-    background-color:#000;
-    color:#fff;
-  
-  }
+#btn_registrar{
+    margin: 30px 0;
+    padding: 10px;
+    border: 2px solid #000;
+    font-size: 20px;
+    color: #fff;
+    font-weight: bold;
+    background: #000;
+    outline: none;
+    cursor: pointer;
+}
+
+#btn_registrar:hover{
+    margin: 50px 0;
+    padding: 10px;
+    border: 2px solid #f6b93b;
+    font-size: 20px;
+    color: #fff;
+    font-weight: bold;
+    background: #f6b93b;
+    outline: none;
+}
   
   .error{
     display:none;
